--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,3 +1,52 @@
 .Weather {
-  border: 1px solid blue;
+  font-family: "Open Sans", sans-serif;
+  border: 1px solid #dadde1;
+  border-radius: 10px;
+  padding: 16px;
+  background-image: linear-gradient(15deg, #74a1b9, #80d0c7);
+  box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+}
+
+.Weather form {
+  margin-bottom: 20px;
+}
+
+.Weather h1 {
+  font-size: 37px;
+  font-weight: 100;
+  margin: 20px 0 0 0;
+  color: #fff;
+}
+.Weather li {
+  font-size: 16px;
+  font-weight: 100;
+  line-height: 19px;
+  list-style: none;
+}
+.Weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+.Weather img {
+  height: 64px;
+  margin-right: 10px;
+  width: 64px;
+  display: inline-block;
+}
+.Weather .temperature {
+  font-weight: bold;
+  color: rgb(33, 33, 33);
+  font-size: 54px;
+  line-height: 64px;
+  margin-left: 5px;
+  font-weight: 400;
+}
+.Weather .unit {
+  color: rgb(33, 33, 33);
+  font-size: 16px;
+  font-weight: 400;
+  position: relative;
+  line-height: 1;
+  top: -28px;
 }
