--- a/src/Weather.css
+++ b/src/Weather.css
@@ -28,10 +28,9 @@
   padding: 0;
 }
 
-.Weather img {
-  height: 64px;
-  margin-right: 10px;
-  width: 64px;
+.Weather canvas {
+  margin-top: 5px;
+  margin-right: 3px;
   display: inline-block;
 }
 .Weather .temperature {
