--- a/src/Weather.css
+++ b/src/Weather.css
@@ -1,9 +1,9 @@
 .Weather {
-  font-family: "Open Sans", sans-serif;
   border: 1px solid #dadde1;
   border-radius: 10px;
   padding: 16px;
   background-image: linear-gradient(15deg, #74a1b9, #80d0c7);
+  height: 400px;
   box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
 }
 
@@ -48,4 +48,12 @@
   position: relative;
   line-height: 1;
   top: -28px;
+}
+
+.Weather .form-control {
+  border: 4px solid #e7b51d;
+}
+.Weather .btn-warning {
+  position: relative;
+  left: -60px;
 }
