--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
-  max-width: 600px;
   margin: 30px auto;
   font-family: "Open Sans", sans-serif;
   color: #625772;
 }
 .App footer {
   font-size: 11px;
-  margin: 10px 0;
+  position: relative;
+  left: 320px;
 }
