--- a/src/DetailedForecast.css
+++ b/src/DetailedForecast.css
@@ -1,13 +1,15 @@
-.Detailed {
+.Detailed .PreviewForecast {
   position: relative;
-  left: 90px;
-  bottom: 100px;
+  left: 150px;
+  bottom: 130px;
   text-align: center;
 }
 
 .Detailed canvas {
   position: relative;
-  bottom: -70px;
-  left: 30px;
+  top: 15px;
+  left: 0px;
   height: 40px;
+  margin: 30px 0 0 10px;
+  text-align: center;
 }
