--- a/src/Weather.css
+++ b/src/Weather.css
@@ -3,8 +3,10 @@
   border-radius: 10px;
   padding: 16px;
   background-image: linear-gradient(15deg, #74a1b9, #80d0c7);
-  height: 400px;
+  height: 415px;
+  width: 490px;
   box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
+  margin: 0 auto;
 }
 
 .Weather form {
