--- a/src/Weather.css
+++ b/src/Weather.css
@@ -45,11 +45,12 @@
 }
 .Weather .unit {
   color: rgb(33, 33, 33);
-  font-size: 16px;
-  font-weight: 400;
+  font-size: 15px;
+  font-weight: 500;
   position: relative;
   line-height: 1;
-  top: -28px;
+  top: 30px;
+  left: -55px;
 }
 
 .Weather .form-control {
