--- a/src/DetailedForecast.css
+++ b/src/DetailedForecast.css
@@ -1,8 +1,19 @@
-.Detailed .PreviewForecast {
+.Detailed {
   position: relative;
-  left: 150px;
-  bottom: 135px;
+  top: -230px;
+  left: -7px;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 6px;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  height: 85px;
+  width: 103%;
+}
+
+.Detailed .PreviewForecast {
   text-align: center;
+  position: relative;
+  bottom: -80px;
+  right: -160px;
 }
 
 .Detailed canvas {
@@ -10,5 +21,6 @@
   top: 15px;
   left: 0px;
   height: 40px;
-  margin: 30px 0 0 10px;
+  margin: auto;
+  padding: 0;
 }
